--- a/Flexylexy.Web/packages.config
+++ b/Flexylexy.Web/packages.config
@@ -26,5 +26,6 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="SimpleInjector" version="3.2.7" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
