--- a/Flexylexy.Web/Flexylexy.Web.csproj
+++ b/Flexylexy.Web/Flexylexy.Web.csproj
@@ -83,6 +83,22 @@
       <HintPath>..\packages\SimpleInjector.3.2.7\lib\net45\SimpleInjector.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="SimpleInjector.Extensions.ExecutionContextScoping, Version=3.2.7.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
+      <HintPath>..\packages\SimpleInjector.Extensions.ExecutionContextScoping.3.2.7\lib\net45\SimpleInjector.Extensions.ExecutionContextScoping.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SimpleInjector.Integration.Web, Version=3.2.7.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
+      <HintPath>..\packages\SimpleInjector.Integration.Web.3.2.7\lib\net40\SimpleInjector.Integration.Web.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SimpleInjector.Integration.Web.Mvc, Version=3.2.7.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
+      <HintPath>..\packages\SimpleInjector.Integration.Web.Mvc.3.2.7\lib\net40\SimpleInjector.Integration.Web.Mvc.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SimpleInjector.Integration.WebApi, Version=3.2.7.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
+      <HintPath>..\packages\SimpleInjector.Integration.WebApi.3.2.7\lib\net45\SimpleInjector.Integration.WebApi.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -160,18 +176,27 @@
     <Compile Include="App_Start\Startup.Signalr.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DependencyResolver.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Hubs\ChatHub.cs" />
+    <Compile Include="Hubs\DiAppExtensions.cs" />
+    <Compile Include="Hubs\DiHubDispatcher.cs" />
     <Compile Include="Hubs\GamesHub.TicTacToe.cs" />
     <Compile Include="Hubs\GamesHub.cs" />
+    <Compile Include="Hubs\DiHubDispatcherMiddleware.cs" />
+    <Compile Include="Hubs\Main.cs" />
+    <Compile Include="Models\ChatMessage.cs" />
     <Compile Include="Models\IClient.cs" />
     <Compile Include="Models\IRoster.cs" />
     <Compile Include="Models\ITokenizer.cs" />
     <Compile Include="Models\Client.cs" />
+    <Compile Include="Models\Move.cs" />
     <Compile Include="Models\Roster.cs" />
     <Compile Include="Models\Tokenizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Hubs\SimpleInjectorHubActivator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap\bootstrap-theme.css" />
@@ -242,8 +267,12 @@
     <TypeScriptCompile Include="app\main.ts" />
     <TypeScriptCompile Include="app\app.component.ts" />
     <TypeScriptCompile Include="app\app.start.component.ts" />
+    <TypeScriptCompile Include="app\services\chat.service.ts" />
+    <TypeScriptCompile Include="app\services\game.service.ts" />
     <TypeScriptCompile Include="app\services\hub.service.ts" />
-    <TypeScriptCompile Include="app\services\name.service.ts" />
+    <TypeScriptCompile Include="app\services\user.service.ts" />
+    <TypeScriptCompile Include="app\types\move.ts" />
+    <TypeScriptCompile Include="app\types\player.ts" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
