--- a/Flexylexy.Web/packages.config
+++ b/Flexylexy.Web/packages.config
@@ -27,5 +27,9 @@
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="SimpleInjector" version="3.2.7" targetFramework="net452" />
+  <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="3.2.7" targetFramework="net452" />
+  <package id="SimpleInjector.Integration.Web" version="3.2.7" targetFramework="net452" />
+  <package id="SimpleInjector.Integration.Web.Mvc" version="3.2.7" targetFramework="net452" />
+  <package id="SimpleInjector.Integration.WebApi" version="3.2.7" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
