--- a/Flexylexy.Web/Web.config
+++ b/Flexylexy.Web/Web.config
@@ -57,10 +57,61 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <system.codedom>
-    <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
-    </compilers>
-  </system.codedom>
+
+  <system.diagnostics>
+    <sources>
+      <source name="SignalR.SqlMessageBus">
+        <listeners>
+          <add name="SignalR-Bus" />
+        </listeners>
+      </source>
+      <source name="SignalR.ServiceBusMessageBus">
+        <listeners>
+          <add name="SignalR-Bus" />
+        </listeners>
+      </source>
+      <source name="SignalR.ScaleoutMessageBus">
+        <listeners>
+          <add name="SignalR-Bus" />
+        </listeners>
+      </source>
+      <source name="SignalR.Transports.WebSocketTransport">
+        <listeners>
+          <add name="SignalR-Transports" />
+        </listeners>
+      </source>
+      <source name="SignalR.Transports.ServerSentEventsTransport">
+        <listeners>
+          <add name="SignalR-Transports" />
+        </listeners>
+      </source>
+      <source name="SignalR.Transports.ForeverFrameTransport">
+        <listeners>
+          <add name="SignalR-Transports" />
+        </listeners>
+      </source>
+      <source name="SignalR.Transports.LongPollingTransport">
+        <listeners>
+          <add name="SignalR-Transports" />
+        </listeners>
+      </source>
+      <source name="SignalR.Transports.TransportHeartBeat">
+        <listeners>
+          <add name="SignalR-Transports" />
+        </listeners>
+      </source>
+    </sources>
+    <switches>
+      <add name="SignalRSwitch" value="Verbose" />
+    </switches>
+    <sharedListeners>
+      <add name="SignalR-Transports"
+           type="System.Diagnostics.TextWriterTraceListener"
+           initializeData="transports.log.txt" />
+      <add name="SignalR-Bus"
+         type="System.Diagnostics.TextWriterTraceListener"
+         initializeData="bus.log.txt" />
+    </sharedListeners>
+    <trace autoflush="true" />
+  </system.diagnostics>
 </configuration>
